# story-forge

./: .gitignore  .mcp.json  COMMIT_CHECKLIST.md  DISTRIBUTION-CHECKLIST.md  INSTALLATION.md  MCP_SERVER_TEST_RESULTS.md  PUBLISHING.md  README.md  package.json  postinstall.js  verify_mcp_server.sh
.claude/commands/writer/: projects.md  setup.md  start.md
.claude/commands/writer/character/: add.md  add.md.backup
.claude/commands/writer/world/: rule.md  rule.md.backup
data/: .gitkeep
rust/story-server/: Cargo.toml
rust/story-server/src/: error.rs  lib.rs  main.rs
rust/story-server/src/context/: mod.rs
rust/story-server/src/continuity/: mod.rs
rust/story-server/src/db/: migrations.rs  mod.rs
rust/story-server/src/mcp/: mod.rs  protocol.rs  registry.rs  types.rs
rust/story-server/src/models/: character.rs  mod.rs  project.rs  scene.rs  world_rule.rs
rust/story-server/src/systems/: mod.rs
rust/story-server/src/tools/: character.rs  mod.rs  plot.rs  project.rs  project.rs.working  world.rs
rust/story-server/tests/integration/: test_character_management.rs  test_plot_structure.rs  test_project_creation.rs  test_story_setup.rs  test_world_rules.rs
scripts/: build.ps1  build.sh
templates/: .mcp.json  QUICKSTART.md  README.md
templates/.claude/commands/writer/: mcp.setup.md  start.md
templates/.claude/commands/writer/character/: add.md
templates/.claude/commands/writer/world/: rule.md
templates/hooks/: hooks.json
test_data/: story_server.db
